# mlops-team50

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ray-train.yml
classifier/: actions.py  bert.py  dataset.py  model.py
ray/: actorsSample.py  config.yaml  configExample.yaml  configTest.yaml  test.py
