[tool.poetry]
name = "mlops-team50"
version = "0.1.0"
description = "Training MLOps project"
authors = ["Denys Shkliarenko <shkliarenko@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
transformers = "^4.34.1"
numpy = "^1.26.1"
pandas = "^2.1.1"
scikit-learn = "^1.3.2"
# Need the constraints below to get aroud the issue with poetry torch libc dependency:
# https://stackoverflow.com/questions/76327419/valueerror-libcublas-so-0-9-not-found-in-the-system-path
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
typer = "^0.9.0"
cachetools = "^5.3.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.7"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
